--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="about-informacion">
                     <img src="./assets/imgs/foto-personal.jpg" alt="Imagen Usuario">
                     <h2>Luca Gonzalo Ledesma</h2>
-                    <h3>Front End Developer Jr.</h3>
+                    <h3>Estudiante de Sistemas</h3>
                 </div>
                 <div class="about-redes">
                     <a href="https://github.com/Lucaledesma"><i class="bi bi-github"></i></a>
@@ -67,7 +67,7 @@
                 </div>
                 <div class="about-botones">
                     <a href="https://drive.google.com/file/d/1A7iz4hOyHpMsvyTIKblFaE5TDTcDr6Wn/view?usp=share_link"><button class="boton boton-resumen">Resumen</button></a>
-                    <a href="#"><button class="boton boton-contacto">Contactanos</button></a>
+                    <a href="#contacto"><button class="boton boton-contacto">Contactanos</button></a>
                 </div>
             </article>
         </section>
@@ -84,7 +84,56 @@
         <section class="main-seccion" id="skills">
             <h2 class="titulo-seccion">Skills</h2>
             <article class="articles skills-article">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde perspiciatis tempora vitae eum exercitationem repellendus tempore reprehenderit, maiores cupiditate nemo ab nesciunt molestiae doloribus ratione reiciendis vero? Debitis, aliquid. Voluptatum.</p>
+                <div class="skill">
+                    <img src="./assets/imgs/skills/react-logo.png" alt="">
+                    <h4>ReactJS</h4>
+                    <small>Intermedio</small>
+                </div>
+                <div class="skill">
+                    <img src="./assets/imgs/skills/js-logo.png" alt="">
+                    <h4>JavaScript</h4>
+                    <small>Intermedio</small>
+                </div>
+                <div class="skill">
+                    <img src="./assets/imgs/skills/html-logo.avif" alt="">
+                    <h4>HTML</h4>
+                    <small>Avanzado</small>
+                </div>
+                <div class="skill">
+                    <img src="./assets/imgs/skills/css-logo.png" alt="">
+                    <h4>CSS</h4>
+                    <small>Avanzado</small>
+                </div>
+                <div class="skill">
+                    <img src="./assets/imgs/skills/sass-logo.png" alt="">
+                    <h4>SASS</h4>
+                    <small>Intermedio</small>
+                </div>
+                <div class="skill">
+                    <img src="./assets/imgs/skills/bootstrap_logo.png" alt="">
+                    <h4>Bootstrap</h4>
+                    <small>Intermedio</small>
+                </div>
+                <div class="skill">
+                    <img src="./assets/imgs/skills/github-logo.png" alt="">
+                    <h4>GitHub</h4>
+                    <small>Intermedio</small>
+                </div>
+                <div class="skill">
+                    <img src="./assets/imgs/skills/java-logo.jpg" alt="">
+                   <h4>Java</h4>
+                   <small>Intermedio</small>
+                </div>
+                <div class="skill">
+                    <img src="./assets/imgs/skills/mysql-logo.png" alt="">
+                    <h4>MySQL</h4>
+                    <small>Intermedio</small>
+                </div>
+                <div class="skill">
+                    <img src="./assets/imgs/skills/cplus-logo.png" alt="">
+                    <h4>C++</h4>
+                    <small>Intermedio</small>
+                </div>
             </article>
         </section>
 
