Projects terminado y Agregamos archivos JSON para cargar las secciones

--- a/index.html
+++ b/index.html
@@ -75,89 +75,43 @@
         <section class="main-seccion" id="educacion">
             <h2 class="titulo-seccion">Education</h2>
             <article id="educacion-contenedor" class="articles educacion-article">
-
                 <!-- Aca se cargan todos los estudios -->
-
             </article>
         </section>
 
         <section class="main-seccion" id="skills">
             <h2 class="titulo-seccion">Skills</h2>
-            <article class="articles skills-article">
-                <div class="skill">
-                    <img src="./assets/imgs/skills/react-logo.png" alt="">
-                    <h4>ReactJS</h4>
-                    <small>Intermedio</small>
-                </div>
-                <div class="skill">
-                    <img src="./assets/imgs/skills/js-logo.png" alt="">
-                    <h4>JavaScript</h4>
-                    <small>Intermedio</small>
-                </div>
-                <div class="skill">
-                    <img src="./assets/imgs/skills/html-logo.avif" alt="">
-                    <h4>HTML</h4>
-                    <small>Avanzado</small>
-                </div>
-                <div class="skill">
-                    <img src="./assets/imgs/skills/css-logo.png" alt="">
-                    <h4>CSS</h4>
-                    <small>Avanzado</small>
-                </div>
-                <div class="skill">
-                    <img src="./assets/imgs/skills/sass-logo.png" alt="">
-                    <h4>SASS</h4>
-                    <small>Intermedio</small>
-                </div>
-                <div class="skill">
-                    <img src="./assets/imgs/skills/bootstrap_logo.png" alt="">
-                    <h4>Bootstrap</h4>
-                    <small>Intermedio</small>
-                </div>
-                <div class="skill">
-                    <img src="./assets/imgs/skills/github-logo.png" alt="">
-                    <h4>GitHub</h4>
-                    <small>Intermedio</small>
-                </div>
-                <div class="skill">
-                    <img src="./assets/imgs/skills/java-logo.jpg" alt="">
-                   <h4>Java</h4>
-                   <small>Intermedio</small>
-                </div>
-                <div class="skill">
-                    <img src="./assets/imgs/skills/mysql-logo.png" alt="">
-                    <h4>MySQL</h4>
-                    <small>Intermedio</small>
-                </div>
-                <div class="skill">
-                    <img src="./assets/imgs/skills/cplus-logo.png" alt="">
-                    <h4>C++</h4>
-                    <small>Intermedio</small>
-                </div>
+            <article id="skill-contenedor" class="articles skills-article">
+                <!-- Aca se cargan todas las skills -->
             </article>
         </section>
 
         <section class="main-seccion" id="proyectos">
             <h2 class="titulo-seccion">Projects</h2>
-            <article class="articles proyectos-article">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde perspiciatis tempora vitae eum exercitationem repellendus tempore reprehenderit, maiores cupiditate nemo ab nesciunt molestiae doloribus ratione reiciendis vero? Debitis, aliquid. Voluptatum.</p>
+            <article id="project-contenedor" class="articles proyectos-article">
+                <!-- Aca se cargan todos los proyectos -->
             </article>
         </section>
 
         <section class="main-seccion" id="contacto">
             <h2 class="titulo-seccion">Contact</h2>
             <article class="articles contacto-article">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde perspiciatis tempora vitae eum exercitationem repellendus tempore reprehenderit, maiores cupiditate nemo ab nesciunt molestiae doloribus ratione reiciendis vero? Debitis, aliquid. Voluptatum.</p>
+                <form action="" method="post">
+                    <div class="contacto-informacion">
+                        <input type="text" placeholder="NOMBRE" required>
+                        <input type="text" placeholder="APELLIDO" required>
+                        <input type="email" placeholder="EMAIL" required>
+                    </div>
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                    <button type="submit">ENVIAR</button>
+                </form>
             </article>
-            <form action="" method="post">
-
-            </form>
         </section>
 
     </main>
 
     <footer class="footer">
-        <p>© Todos los derechos reservados.</p>
+        <p>© Portafolio Personal - Ticmas</p>
     </footer>
     
     <script src="./js/index.js"></script>
