Modificamos algunas secciones y terminamos web responsive

--- a/index.html
+++ b/index.html
@@ -56,18 +56,20 @@
         <section class="main-seccion" id="about">
             <h2 class="titulo-seccion">About Me</h2>
             <article class="articles about-article">
-                <div class="about-informacion">
+                <div class="about-img">
                     <img src="./assets/imgs/foto-personal.jpg" alt="Imagen Usuario">
-                    <h2>Luca Gonzalo Ledesma</h2>
-                    <h3>Estudiante de Sistemas</h3>
                 </div>
-                <div class="about-redes">
-                    <a href="https://github.com/Lucaledesma"><i class="bi bi-github"></i></a>
-                    <a href="https://www.linkedin.com/in/luca-gonzalo-ledesma/"><i class="bi bi-linkedin"></i></a>
-                </div>
-                <div class="about-botones">
-                    <a href="https://drive.google.com/file/d/1A7iz4hOyHpMsvyTIKblFaE5TDTcDr6Wn/view?usp=share_link"><button class="boton boton-resumen">Resumen</button></a>
-                    <a href="#contacto"><button class="boton boton-contacto">Contactanos</button></a>
+                <div class="about-informacion">
+                    <div>
+                        <h2>Luca Gonzalo Ledesma</h2>
+                        <h4>Estudiante de Sistemas y Desarrollador Frontend Jr.</h4>
+                    </div>
+                    <p>Mi nombre es Luca, soy estudiante de Licenciatura en Sistemas en la Universidad Nacional de Lanús (UNLA) y estudiante de la Carrera de Desarrollo Frontend en CoderHouse.</p>
+                    <p>Actualmente estoy estudiando Testing Manual de Software en InstitutoWeb y realizo el curso de Primeros Pasos del Desarrollo FrontEnd de Academy Ticmas. En simultaneo, trabajo en proyectos de Desarrollo Web por mi cuenta.</p>
+                    <div class="about-botones">
+                        <a href="https://drive.google.com/file/d/1TUECqhnsGRa3LjJvkKCtLFov-Npu7RU0/view?usp=sharing" target="_blank"><button class="boton boton-resumen">Resumen</button></a>
+                        <a href="#contacto"><button class="boton boton-contacto">Contactanos</button></a>
+                    </div>
                 </div>
             </article>
         </section>
@@ -93,25 +95,16 @@
             </article>
         </section>
 
-        <section class="main-seccion" id="contacto">
-            <h2 class="titulo-seccion">Contact</h2>
-            <article class="articles contacto-article">
-                <form action="" method="post">
-                    <div class="contacto-informacion">
-                        <input type="text" placeholder="NOMBRE" required>
-                        <input type="text" placeholder="APELLIDO" required>
-                        <input type="email" placeholder="EMAIL" required>
-                    </div>
-                    <textarea name="" id="" cols="30" rows="10"></textarea>
-                    <button type="submit">ENVIAR</button>
-                </form>
-            </article>
-        </section>
-
     </main>
 
-    <footer class="footer">
-        <p>© Portafolio Personal - Ticmas</p>
+    <footer class="footer" id="contacto">
+        <p>Informacion de contacto</p>
+        <div class="footer-contacts">
+            <a class="contact-link" href="mailto:lucaledesma55@gmail.com" target="_blank"><i class="bi bi-envelope"></i></a>
+            <a class="contact-link" href="https://wa.me/5491157358513" target="_blank"><i class="bi bi-whatsapp"></i></a>
+            <a class="contact-link" href="https://github.com/Lucaledesma" target="_blank"><i class="bi bi-github"></i></a>
+            <a class="contact-link" href="https://www.linkedin.com/in/luca-gonzalo-ledesma/" target="_blank"><i class="bi bi-linkedin"></i></a>
+        </div>
     </footer>
     
     <script src="./js/index.js"></script>
