--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Portafolio Personal"/>
+    <meta property="og:type" content="article"/>
+    <meta property="og:url" content="https://lucaledesma.github.io/Ticmas-ProyectoFinal/"/>
+    <meta property="og:image" content="./assets/imgs/ticmas-logo.png"/>
+    <meta property="og:description" content="Proyecto final del curso de 'Principios del Desarrollo Frontend'"/>
     <link rel="shortcut icon" href="./assets/imgs/ticmas-logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/styles.css">
